; ModuleID = '/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_mkmakefile.c_copy_dependencies.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/SETUP/config/extr_mkmakefile.c_copy_dependencies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@makbuf = common dso_local global i8* null, align 8
@LINESIZE = common dso_local global i32 0, align 4
@OLDSALUTATION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @copy_dependencies(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 3, i32* %5, align 4
  br label %6

6:                                                ; preds = %19, %2
  %7 = load i8*, i8** @makbuf, align 8
  %8 = load i32, i32* @LINESIZE, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = call i32* @fgets(i8* %7, i32 %8, i32* %9)
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %6
  %13 = load i8*, i8** @makbuf, align 8
  %14 = load i32, i32* @OLDSALUTATION, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @strncmp(i8* %13, i32 %14, i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %12
  br label %20

19:                                               ; preds = %12
  br label %6

20:                                               ; preds = %18, %6
  br label %21

21:                                               ; preds = %39, %36, %20
  %22 = load i8*, i8** @makbuf, align 8
  %23 = load i32, i32* @LINESIZE, align 4
  %24 = load i32*, i32** %3, align 8
  %25 = call i32* @fgets(i8* %22, i32 %23, i32* %24)
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %43

27:                                               ; preds = %21
  %28 = load i32, i32* %5, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %39

30:                                               ; preds = %27
  %31 = load i8*, i8** @makbuf, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 0
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp eq i32 %34, 10
  br i1 %35, label %36, label %37

36:                                               ; preds = %30
  br label %21

37:                                               ; preds = %30
  store i32 0, i32* %5, align 4
  br label %38

38:                                               ; preds = %37
  br label %39

39:                                               ; preds = %38, %27
  %40 = load i8*, i8** @makbuf, align 8
  %41 = load i32*, i32** %4, align 8
  %42 = call i32 @fputs(i8* %40, i32* %41)
  br label %21

43:                                               ; preds = %21
  ret void
}

declare dso_local i32* @fgets(i8*, i32, i32*) #1

declare dso_local i32 @strncmp(i8*, i32, i32) #1

declare dso_local i32 @fputs(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
